# test_tpa_ros

./: LICENSE  README.md
smap/: frames_2026-03-24_22.59.31.gv  map_slamtoolbox_launch.py  my_robot_map.pgm  my_robot_map.yaml  save_map.sh  slam_map.sh
yahboom_nav_fixed_patched/: slam_map.sh
yahboom_nav_fixed_patched/src/yahboom_nav/: CMakeLists.txt  package.xml
yahboom_nav_fixed_patched/src/yahboom_nav/config/: nav2_params.yaml  nav_params.yaml
yahboom_nav_fixed_patched/src/yahboom_nav/include/yahboom_nav/: detection_manager.hpp  navigation_manager.hpp  robot_state_machine.hpp  servo_controller.hpp  types.hpp
yahboom_nav_fixed_patched/src/yahboom_nav/launch/: auto_nav.launch.py  map_slamtoolbox_launch.py
yahboom_nav_fixed_patched/src/yahboom_nav/rviz/: nav.rviz
yahboom_nav_fixed_patched/src/yahboom_nav/scripts/: cam_pose_apriltag.py  publish_initial_pose.py
yahboom_nav_fixed_patched/src/yahboom_nav/src/: auto_nav_node.cpp  detection_manager.cpp  navigation_manager.cpp  robot_state_machine.cpp  servo_controller.cpp
